-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
5.15.10, 6.0.3, 6.1.0 RC, 6.4.1, 6.5.1
-
-
01d55f020 (dev), 1248d78db (6.6), dcc0b4ab3 (tqtc/lts-6.5)
Steps to reproduce:
- Open any Qt gui app, place a breakpoint in QWindowSystemInterface::handlePrimaryScreenChanged.
- Open display settings, change main display (you need at least two monitors for this to work).
- Breakpoint is never hit (and thus QGuiApplication:: primaryScreen is not changed, and QGuiApplication:: primaryScreenChanged is not emitted).
I'm testing this on Win10 19041.928.
I did some digging and it looks like the right place to call QWindowSystemInterface::handlePrimaryScreenChanged would be from inside the QWindowsScreen::handleChanges. I've attached a patch.
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTBUG-93368 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 516766,4 | Windows QPA: Emit QGuiApplication::primaryScreenChanged() | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 516835,2 | Windows QPA: Emit QGuiApplication::primaryScreenChanged() | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 516960,2 | Windows QPA: Emit QGuiApplication::primaryScreenChanged() | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |