Windows QPA: Emit QGuiApplication::primaryScreenChanged()

Patch as contributed.

Fixes: QTBUG-93368
Change-Id: I8cc884e64e84128b125415e78e3a34245ae4e626
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
Reviewed-by: Wladimir Leuschner <wladimir.leuschner@qt.io>
(cherry picked from commit 01d55f0203e70e1345b068d940bc31026f181bf3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 1248d78dbecbaa0a592c61689612fc1c532e2ddf)